# iot-azure-c

./: Adafruit_ADS1015.cpp  Adafruit_ADS1015.h  Adafruit_ADS1115.cpp  Adafruit_ADS1115.h  CMakeLists.txt  README.md  ads1115.c  ads1115.h  bme280.c  bme280.h  config.h  dht11.c  dht11.h  main.c  setup.sh  soil_moisture_sensor.c  soil_moisture_sensor.h  telemetry.c  telemetry.h  wiring.c  wiring.h
